# ecom_server

./: .pre-commit-config.yaml  README.md  db.sqlite3  pyproject.toml
auth/: serializers.py  urls.py  views.py
cart/: models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_cart_user.py  0003_cart_total_price.py
cart_item/: models.py  serializers.py  urls.py  views.py
cart_item/migrations/: 0001_initial.py  0002_cartitem_total_price.py  0003_remove_cartitem_total_price_alter_cartitem_quantity.py
category/: admin.py  models.py  urls.py  views.py
category/migrations/: 0001_initial.py
order/: models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py
order_item/: models.py  urls.py  views.py
order_item/migrations/: 0001_initial.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_products_category.py
server/: settings.py  urls.py
user_metadata/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
user_metadata/migrations/: 0001_initial.py
wishlist/: models.py  urls.py  views.py
wishlist/migrations/: 0001_initial.py
wishlist_item/: apps.py  models.py  serializers.py  urls.py  views.py
wishlist_item/migrations/: 0001_initial.py
